{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 247,
  "lineage": "c4b83fe1-1d87-1610-3c02-b355c114ffe3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "primary_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04e5276ebb8451442",
            "arn": "arn:aws:ec2:us-east-1:764415225264:instance/i-0864c715d1d331c9e",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0864c715d1d331c9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02399d7833164c00e",
            "private_dns": "ip-10-0-101-166.ec2.internal",
            "private_ip": "10.0.101.166",
            "public_ip": "54.173.96.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09b530d559d3e54d4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b6f789080ca04890",
            "tags": {
              "Name": "Primary Instance"
            },
            "tags_all": {
              "Name": "Primary Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0116cc279a3a1941e"
            ]
          },
          "dependencies": [
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "secondary_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-032509850cf9ee54e",
            "arn": "arn:aws:ec2:us-west-2:764415225264:instance/i-095ff3e02acb95745",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-095ff3e02acb95745",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0863547c0d2ba1341",
            "private_dns": "ip-10-1-101-224.us-west-2.compute.internal",
            "private_ip": "10.1.101.224",
            "public_ip": "34.210.201.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-016c8ea1d5812db09",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-060d73532d5852e51",
            "tags": {
              "Name": "Secondary Instance"
            },
            "tags_all": {
              "Name": "Secondary Instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-088526760ab2577bc"
            ]
          },
          "dependencies": [
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb4d10cda1bd73da",
            "association_id": "eipassoc-0a3394e3795d023c6",
            "domain": "vpc",
            "id": "eipalloc-0bb4d10cda1bd73da",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e526419fb01c283e",
            "private_dns": "ip-10-0-101-206.ec2.internal",
            "private_ip": "10.0.101.206",
            "public_dns": "ec2-52-55-185-196.compute-1.amazonaws.com",
            "public_ip": "52.55.185.196",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Primary-VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "Primary-VPC-us-east-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ed8960b281a79d4",
            "association_id": "eipassoc-0f39e74680f1e9fbc",
            "domain": "vpc",
            "id": "eipalloc-00ed8960b281a79d4",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fb009496de1d1582",
            "private_dns": "ip-10-0-102-253.ec2.internal",
            "private_ip": "10.0.102.253",
            "public_dns": "ec2-44-218-2-218.compute-1.amazonaws.com",
            "public_ip": "44.218.2.218",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Primary-VPC-us-east-1b"
            },
            "tags_all": {
              "Name": "Primary-VPC-us-east-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764415225264:internet-gateway/igw-0ca5d9f8ea8cd1484",
            "id": "igw-0ca5d9f8ea8cd1484",
            "owner_id": "764415225264",
            "tags": {
              "Name": "Primary-VPC"
            },
            "tags_all": {
              "Name": "Primary-VPC"
            },
            "vpc_id": "vpc-0fe4b3634aecd6806"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb4d10cda1bd73da",
            "connectivity_type": "public",
            "id": "nat-0e60c79896a2f261d",
            "network_interface_id": "eni-0e526419fb01c283e",
            "private_ip": "10.0.101.206",
            "public_ip": "52.55.185.196",
            "subnet_id": "subnet-0b6f789080ca04890",
            "tags": {
              "Name": "Primary-VPC-us-east-1a"
            },
            "tags_all": {
              "Name": "Primary-VPC-us-east-1a"
            }
          },
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ed8960b281a79d4",
            "connectivity_type": "public",
            "id": "nat-071eebc616ff38ecf",
            "network_interface_id": "eni-0fb009496de1d1582",
            "private_ip": "10.0.102.253",
            "public_ip": "44.218.2.218",
            "subnet_id": "subnet-0d6f9f4c6412be87d",
            "tags": {
              "Name": "Primary-VPC-us-east-1b"
            },
            "tags_all": {
              "Name": "Primary-VPC-us-east-1b"
            }
          },
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b13317e22ef0a4691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e60c79896a2f261d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b13317e22ef0a469",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_nat_gateway.this",
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-02dbbea6bba162ffe1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-071eebc616ff38ecf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02dbbea6bba162ffe",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_eip.nat",
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_nat_gateway.this",
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca5d9f8ea8cd1484",
            "id": "r-rtb-0f07569606beaaedc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f07569606beaaedc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_internet_gateway.this",
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764415225264:route-table/rtb-0b13317e22ef0a469",
            "id": "rtb-0b13317e22ef0a469",
            "owner_id": "764415225264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e60c79896a2f261d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Primary-VPC-private-us-east-1a"
            },
            "tags_all": {
              "Name": "Primary-VPC-private-us-east-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe4b3634aecd6806"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764415225264:route-table/rtb-02dbbea6bba162ffe",
            "id": "rtb-02dbbea6bba162ffe",
            "owner_id": "764415225264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-071eebc616ff38ecf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Primary-VPC-private-us-east-1b"
            },
            "tags_all": {
              "Name": "Primary-VPC-private-us-east-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe4b3634aecd6806"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764415225264:route-table/rtb-0f07569606beaaedc",
            "id": "rtb-0f07569606beaaedc",
            "owner_id": "764415225264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca5d9f8ea8cd1484",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Primary-VPC-public"
            },
            "tags_all": {
              "Name": "Primary-VPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe4b3634aecd6806"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e87d0060d65431bf",
            "route_table_id": "rtb-0b13317e22ef0a469",
            "subnet_id": "subnet-0fbc692cbf27d3559"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca300a28999dcf5d",
            "route_table_id": "rtb-02dbbea6bba162ffe",
            "subnet_id": "subnet-0bc6d6edf886463e5"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.private",
            "module.vpc_primary.aws_subnet.private",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080a36de98b3f5a05",
            "route_table_id": "rtb-0f07569606beaaedc",
            "subnet_id": "subnet-0b6f789080ca04890"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-065ee224a5f76c87c",
            "route_table_id": "rtb-0f07569606beaaedc",
            "subnet_id": "subnet-0d6f9f4c6412be87d"
          },
          "dependencies": [
            "module.vpc_primary.aws_route_table.public",
            "module.vpc_primary.aws_subnet.public",
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764415225264:subnet/subnet-0fbc692cbf27d3559",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbc692cbf27d3559",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764415225264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Primary-VPC-private-us-east-1a"
            },
            "tags_all": {
              "Name": "Primary-VPC-private-us-east-1a"
            },
            "vpc_id": "vpc-0fe4b3634aecd6806"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764415225264:subnet/subnet-0bc6d6edf886463e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc6d6edf886463e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764415225264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Primary-VPC-private-us-east-1b"
            },
            "tags_all": {
              "Name": "Primary-VPC-private-us-east-1b"
            },
            "vpc_id": "vpc-0fe4b3634aecd6806"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764415225264:subnet/subnet-0b6f789080ca04890",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b6f789080ca04890",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764415225264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Primary-VPC-public-us-east-1a"
            },
            "tags_all": {
              "Name": "Primary-VPC-public-us-east-1a"
            },
            "vpc_id": "vpc-0fe4b3634aecd6806"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764415225264:subnet/subnet-0d6f9f4c6412be87d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6f9f4c6412be87d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764415225264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Primary-VPC-public-us-east-1b"
            },
            "tags_all": {
              "Name": "Primary-VPC-public-us-east-1b"
            },
            "vpc_id": "vpc-0fe4b3634aecd6806"
          },
          "dependencies": [
            "module.vpc_primary.aws_vpc.this",
            "module.vpc_primary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_primary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:764415225264:vpc/vpc-0fe4b3634aecd6806",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcbc4c40036f67a8",
            "default_route_table_id": "rtb-00dbf508116d3b5f4",
            "default_security_group_id": "sg-0116cc279a3a1941e",
            "dhcp_options_id": "dopt-0919f21d4335cac83",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fe4b3634aecd6806",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00dbf508116d3b5f4",
            "owner_id": "764415225264",
            "tags": {
              "Name": "Primary-VPC"
            },
            "tags_all": {
              "Name": "Primary-VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bd3bfc07b618ee3",
            "association_id": "eipassoc-0613bac0a7f2c6d55",
            "domain": "vpc",
            "id": "eipalloc-00bd3bfc07b618ee3",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0d1bacdcef4b3d3a2",
            "private_dns": "ip-10-1-101-64.us-west-2.compute.internal",
            "private_ip": "10.1.101.64",
            "public_dns": "ec2-52-89-176-179.us-west-2.compute.amazonaws.com",
            "public_ip": "52.89.176.179",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Secondary-VPC-us-west-2a"
            },
            "tags_all": {
              "Name": "Secondary-VPC-us-west-2a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07683556ee8e2ef5d",
            "association_id": "eipassoc-0c16244b1ed23c871",
            "domain": "vpc",
            "id": "eipalloc-07683556ee8e2ef5d",
            "network_border_group": "us-west-2",
            "network_interface": "eni-022951a0faeb1584f",
            "private_dns": "ip-10-1-102-6.us-west-2.compute.internal",
            "private_ip": "10.1.102.6",
            "public_dns": "ec2-100-20-24-160.us-west-2.compute.amazonaws.com",
            "public_ip": "100.20.24.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Secondary-VPC-us-west-2b"
            },
            "tags_all": {
              "Name": "Secondary-VPC-us-west-2b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:764415225264:internet-gateway/igw-0d1e1b650b97288e9",
            "id": "igw-0d1e1b650b97288e9",
            "owner_id": "764415225264",
            "tags": {
              "Name": "Secondary-VPC"
            },
            "tags_all": {
              "Name": "Secondary-VPC"
            },
            "vpc_id": "vpc-009ce6f28f0b444b7"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bd3bfc07b618ee3",
            "connectivity_type": "public",
            "id": "nat-0eb2cd7c3ecfa0bcf",
            "network_interface_id": "eni-0d1bacdcef4b3d3a2",
            "private_ip": "10.1.101.64",
            "public_ip": "52.89.176.179",
            "subnet_id": "subnet-060d73532d5852e51",
            "tags": {
              "Name": "Secondary-VPC-us-west-2a"
            },
            "tags_all": {
              "Name": "Secondary-VPC-us-west-2a"
            }
          },
          "dependencies": [
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07683556ee8e2ef5d",
            "connectivity_type": "public",
            "id": "nat-015bcd6215d57567e",
            "network_interface_id": "eni-022951a0faeb1584f",
            "private_ip": "10.1.102.6",
            "public_ip": "100.20.24.160",
            "subnet_id": "subnet-0c3a4964d38672bc2",
            "tags": {
              "Name": "Secondary-VPC-us-west-2b"
            },
            "tags_all": {
              "Name": "Secondary-VPC-us-west-2b"
            }
          },
          "dependencies": [
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-014146dc2c8e0b9c01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0eb2cd7c3ecfa0bcf",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-014146dc2c8e0b9c0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_nat_gateway.this",
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09a00ebd30dee92f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-015bcd6215d57567e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09a00ebd30dee92f4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_eip.nat",
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_nat_gateway.this",
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d1e1b650b97288e9",
            "id": "r-rtb-0690f908c9e4dd2f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0690f908c9e4dd2f4",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_internet_gateway.this",
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:764415225264:route-table/rtb-014146dc2c8e0b9c0",
            "id": "rtb-014146dc2c8e0b9c0",
            "owner_id": "764415225264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0eb2cd7c3ecfa0bcf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Secondary-VPC-private-us-west-2a"
            },
            "tags_all": {
              "Name": "Secondary-VPC-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-009ce6f28f0b444b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:764415225264:route-table/rtb-09a00ebd30dee92f4",
            "id": "rtb-09a00ebd30dee92f4",
            "owner_id": "764415225264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015bcd6215d57567e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Secondary-VPC-private-us-west-2b"
            },
            "tags_all": {
              "Name": "Secondary-VPC-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-009ce6f28f0b444b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:764415225264:route-table/rtb-0690f908c9e4dd2f4",
            "id": "rtb-0690f908c9e4dd2f4",
            "owner_id": "764415225264",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d1e1b650b97288e9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Secondary-VPC-public"
            },
            "tags_all": {
              "Name": "Secondary-VPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-009ce6f28f0b444b7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d7b37c6b8030b79",
            "route_table_id": "rtb-014146dc2c8e0b9c0",
            "subnet_id": "subnet-0223df77cb77eb62f"
          },
          "dependencies": [
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.private",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0903142e7899f2d",
            "route_table_id": "rtb-09a00ebd30dee92f4",
            "subnet_id": "subnet-02c712365875824ad"
          },
          "dependencies": [
            "module.vpc_secondary.aws_route_table.private",
            "module.vpc_secondary.aws_subnet.private",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef1415beee6869a7",
            "route_table_id": "rtb-0690f908c9e4dd2f4",
            "subnet_id": "subnet-060d73532d5852e51"
          },
          "dependencies": [
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067212cc5a4b1ee23",
            "route_table_id": "rtb-0690f908c9e4dd2f4",
            "subnet_id": "subnet-0c3a4964d38672bc2"
          },
          "dependencies": [
            "module.vpc_secondary.aws_route_table.public",
            "module.vpc_secondary.aws_subnet.public",
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:764415225264:subnet/subnet-0223df77cb77eb62f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0223df77cb77eb62f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764415225264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Secondary-VPC-private-us-west-2a"
            },
            "tags_all": {
              "Name": "Secondary-VPC-private-us-west-2a"
            },
            "vpc_id": "vpc-009ce6f28f0b444b7"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:764415225264:subnet/subnet-02c712365875824ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c712365875824ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "764415225264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Secondary-VPC-private-us-west-2b"
            },
            "tags_all": {
              "Name": "Secondary-VPC-private-us-west-2b"
            },
            "vpc_id": "vpc-009ce6f28f0b444b7"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:764415225264:subnet/subnet-060d73532d5852e51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-060d73532d5852e51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764415225264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Secondary-VPC-public-us-west-2a"
            },
            "tags_all": {
              "Name": "Secondary-VPC-public-us-west-2a"
            },
            "vpc_id": "vpc-009ce6f28f0b444b7"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:764415225264:subnet/subnet-0c3a4964d38672bc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3a4964d38672bc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "764415225264",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Secondary-VPC-public-us-west-2b"
            },
            "tags_all": {
              "Name": "Secondary-VPC-public-us-west-2b"
            },
            "vpc_id": "vpc-009ce6f28f0b444b7"
          },
          "dependencies": [
            "module.vpc_secondary.aws_vpc.this",
            "module.vpc_secondary.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_secondary",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].secondary",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:764415225264:vpc/vpc-009ce6f28f0b444b7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-079eff1140f1dc464",
            "default_route_table_id": "rtb-036586dff02c8849f",
            "default_security_group_id": "sg-088526760ab2577bc",
            "dhcp_options_id": "dopt-05704ddabcbf2e91a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-009ce6f28f0b444b7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-036586dff02c8849f",
            "owner_id": "764415225264",
            "tags": {
              "Name": "Secondary-VPC"
            },
            "tags_all": {
              "Name": "Secondary-VPC"
            }
          }
        }
      ]
    }
  ]
}